--- a/src/assets/css/screens/alert.css
+++ b/src/assets/css/screens/alert.css
@@ -1,4 +1,55 @@
-.user-component {
+.main-screen{
+    position: relative;
+    width: 100vw;
+}
+.inner{
+    /* position: absolute;
+    width: 80%; */
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.user-component__title, 
+.user-component__subtitle{
+    margin-top: 8px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.user-component{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10%;
+}
+.user-component__avatar{
+    border-radius: 50%;
+}
+
+.user-component__time{
+    font-weight: 600;
+    font-size: 14px;
+    color: rgb(155, 155, 155);
+    margin-top: 10px;
+}
+.check-button{
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 2px;
+    font-size: 12px;
+    font-weight: 600;
+    border: 0.5px solid #333;
+}
+
+.aution_button{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: #FFC1AA;
+}
+
+/* .user-component {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
@@ -74,4 +125,4 @@
     justify-content: center;
     font-weight: 600;
     font-size: 22px;
-}
+} */
