--- a/src/assets/css/screens/information.css
+++ b/src/assets/css/screens/information.css
@@ -93,3 +93,12 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     transition: border-color 0.3s ease-in-out;
   }
+
+  .information-form__input2 {
+    padding: 10px 70px;
+    border: none;
+    font-size: 16px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    transition: border-color 0.3s ease-in-out;
+  }
