--- a/src/assets/css/screens/login.css
+++ b/src/assets/css/screens/login.css
@@ -34,7 +34,10 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
 }
-
+.loginContain{
+  width: 90%;
+  margin: auto;
+}
 .login-form__input::placeholder {
   color: rgba(0, 0, 0, 0.4);
 }
