--- a/src/assets/css/screens/alert.css
+++ b/src/assets/css/screens/alert.css
@@ -1,6 +1,6 @@
 .main-screen{
     position: relative;
-    width: 100vw;
+    width: 100%;
 }
 .inner{
     /* position: absolute;
@@ -14,6 +14,24 @@
     margin-top: 8px;
     font-size: 16px;
     font-weight: 700;
+}
+.goods_group li{
+    height: 120px;
+    border: .5px solid #333;
+}
+.user-component__title{
+    color: rgb(155, 155, 155);
+}
+.user-component__content{
+    margin-top: 8px;
+    font-weight: 500;
+    height: 43px;
+    line-height: 1.3;
+    overflow-y: scroll;
+}
+.user-component__text{
+    width: 130px;
+    margin-top: -25px;
 }
 .user-component{
     display: flex;
@@ -83,13 +101,6 @@
 .user-component__title {
     font-weight: 600;
     font-size: 22px;
-}
-
-.user-component__subtitle {
-    margin-top: 8px;
-    font-size: 17px;
-    color: rgba(0,0,0,0.5);
-    display: flex;
 }
 
 .badge {
